feat: modify monitoring installation

--- a/Monitoring/kubernetes-full-monitoring/mub-monitor.yaml
+++ b/Monitoring/kubernetes-full-monitoring/mub-monitor.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      prometheus.io/scrape: 'true'
+      prometheus.io/scrape: "true"
   podMetricsEndpoints:
-  - port: "http-mubpodport"
-
+    - port: "http-mubpodport"
+      path: "/metrics"
