--- a/Deployers/K8sDeployer/Templates/DeploymentTemplate.yaml
+++ b/Deployers/K8sDeployer/Templates/DeploymentTemplate.yaml
@@ -99,3 +99,19 @@ spec:
     name: grpc-mubserviceport
   selector:
     app: {{SERVICE_NAME}}
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: {{SERVICE_NAME}}
+  namespace: {{NAMESPACE}}
+  labels:
+    app: {{SERVICE_NAME}}
+spec:
+ scaleTargetRef:
+   apiVersion: apps/v1
+   kind: Deployment
+   name: {{SERVICE_NAME}}
+ minReplicas: 1
+ maxReplicas: 50
+ targetCPUUtilizationPercentage: 80
